added weather forecast html and added basic css

--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,23 @@ main {
   font-size: 24px;
 }
 
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.forecast-date {
+  font-size: 16px;
+}
+
+.forecast-temperature {
+  font-size: 13px;
+}
+
+.min-temperature {
+  opacity: 0.4;
+}
+
 footer {
   border-top: 1px solid #d5dbcb;
   padding: 30px 0 0 0;
