--- a/src/index.css
+++ b/src/index.css
@@ -64,16 +64,28 @@ main {
 }
 
 .weather-forecast {
-  margin-top: 20px;
-  text-align: center;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
 }
 
 .forecast-date {
+  text-align: center;
   font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 6px;
+}
+
+.weather-forecast-icon {
+  font-size: 38px;
+  text-align: center;
 }
 
 .forecast-temperature {
-  font-size: 13px;
+  text-align: center;
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
 }
 
 .min-temperature {
